# singly

./: Cargo.toml  LICENSE  README.md
src/: inner.rs  lib.rs
tests/: integration_test.rs
