[package]
name = "singly"
version = "0.1.0"
edition = "2021"
authors = ["UnknownRori <68576836+UnknownRori@users.noreply.github.com>"]
description = "Lightweight Non-Thread Safe Singleton"
license = "MIT"
repository = "https://github.com/UnknownRori/singly"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.3"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
